--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^15.4.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.0",
+    "react-fontawesome": "^1.6.1",
     "react-router-dom": "next"
   },
   "scripts": {
@@ -18,5 +19,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
