--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint src",
-    "dev": "nodemon --exec 'babel-node src/index'",
+    "dev": "nodemon --exec babel-node src/index",
     "test": "npm run lint",
     "start": "nf start"
   },
@@ -35,8 +35,9 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "bcrypt": "^0.8.7",
+    "bcrypt": "2.4.3",
     "body-parser": "^1.15.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "create-react-app": "1.2.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
@@ -48,8 +49,14 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-fontawesome": "^1.6.1",
+    "react-redux": "^5.0.4",
+    "react-rnd": "^5.0.3",
     "react-router-dom": "^4.1.1",
     "react-scripts": "^0.9.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
