--- a/package.json
+++ b/package.json
@@ -46,15 +46,17 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "react": "^15.5.4",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^16.6.3",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.4",
     "react-rnd": "^9.0.2",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^0.9.5",
-    "redux": "^3.6.0",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
   },
